--- a/content/about/clojureclr.adoc
+++ b/content/about/clojureclr.adoc
@@ -1,16 +1,16 @@
 = Clojure CLR
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: about
 :toc: macro
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== ClojureCLR 
+== ClojureCLR
 
 This project is a native implementation of Clojure on the Common Language Runtime (CLR), the execution engine of Microsoft's .Net Framework.
 
 ClojureCLR is programmed in C# (and Clojure itself) and makes use of Microsoft's Dynamic Language Runtime (DLR).
 
-=== https://github.com/clojure/clojure-clr[ClojureCLR Home] 
-=== https://github.com/clojure/clojure-clr/wiki/Getting-binaries[Downloading Binaries] 
+=== https://github.com/clojure/clojure-clr[ClojureCLR Home]
+=== https://github.com/clojure/clojure-clr/wiki/Getting-binaries[Downloading Binaries]
