--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -1,7 +1,7 @@
 = Java Interop
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: reference
 :toc: macro
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
@@ -11,7 +11,7 @@ toc::[]
 == Java Interop
 
 [[dot]]
-== Member access 
+== Member access
 
 [%hardbreaks]
 **(.instanceMember instance args*)**
@@ -46,14 +46,14 @@ The preferred idiomatic forms for accessing field or method members are given ab
 Classname/staticField ==> (. Classname staticField)
 ----
 
-== The Dot special form 
+== The Dot special form
 
 [%hardbreaks]
 *(_._ instance-expr member-symbol)*
 *(_._ Classname-symbol member-symbol)*
 *(_._ instance-expr -field-symbol)*
-*(_._ instance-expr (method-symbol args*))* or *(_._ instance-expr method-symbol args*)* 
-*(_._ Classname-symbol (method-symbol args*))* or *(_._ Classname-symbol method-symbol args*)* 
+*(_._ instance-expr (method-symbol args*))* or *(_._ instance-expr method-symbol args*)*
+*(_._ Classname-symbol (method-symbol args*))* or *(_._ Classname-symbol method-symbol args*)*
 
 Special form.
 
@@ -112,7 +112,7 @@ Special form.
 
 The args, if any, are evaluated from left to right, and passed to the constructor of the class named by Classname. The constructed object is returned.
 
-=== Alternative Macro Syntax 
+=== Alternative Macro Syntax
 
 As shown, in addition to the canonic special form new, Clojure supports special macroexpansion of symbols containing '.':
 
@@ -173,16 +173,16 @@ Takes a Java object and returns a read-only implementation of the map abstractio
 [source,clojure]
 ----
 (bean java.awt.Color/black)
--> {:RGB -16777216, :alpha 255, :blue 0, :class java.awt.Color, 
+-> {:RGB -16777216, :alpha 255, :blue 0, :class java.awt.Color,
     :colorSpace #object[java.awt.color.ICC_ColorSpace 0x5cb42b "java.awt.color.ICC_ColorSpace@5cb42b"],
     :green 0, :red 0, :transparency 1}
 ----
 
-== Support for Java in Clojure Library Functions 
+== Support for Java in Clojure Library Functions
 
 Many of the Clojure library functions have defined semantics for objects of Java types. contains? and get work on Java Maps, arrays, Strings, the latter two with integer keys. count works on Java Strings, Collections and arrays. nth works on Java Strings, Lists and arrays. seq works on Java reference arrays, Iterables and Strings. Since much of the rest of the library is built upon these functions, there is great support for using Java objects in Clojure algorithms.
 
-== Implementing Interfaces and Extending Classes 
+== Implementing Interfaces and Extending Classes
 
 Clojure supports the dynamic creation of objects that implement one or more interfaces and/or extend a class with the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy[proxy] macro. The resulting objects are of an anonymous class. You can also generate statically-named classes and .class files with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class]. As of Clojure 1.2, http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reify[reify] is also available for implementing interfaces.
 
@@ -198,7 +198,7 @@ Macro
 
 Expands to code which creates a instance of a proxy class that implements the named class/interface(s) by calling the supplied fns. A single class, if provided, must be first. If not provided it defaults to Object. The interfaces names must be valid interface types. If a method fn is not provided for a class method, the superclass method will be called. If a method fn is not provided for an interface method, an UnsupportedOperationException will be thrown should it be called. Method fns are closures and can capture the environment in which proxy is called. Each method fn takes an additional implicit first arg, which is bound to this. Note that while method fns can be provided to override protected methods, they have no other access to protected members, nor to super, as these capabilities cannot be proxied.
 
-== Arrays 
+== Arrays
 
 Clojure supports the creation, reading and modification of Java arrays. It is recommended that you limit use of arrays to interop with Java libraries that require them as arguments or use them as return values.
 
@@ -213,7 +213,7 @@ Mutate an array: http://clojure.github.io/clojure/clojure.core-api.html#clojure.
 Process an existing array: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/aget[aget] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/alength[alength] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/amap[amap] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/areduce[areduce]
 
 [[typehints]]
-== Type Hints 
+== Type Hints
 
 Clojure supports the use of type hints to assist the compiler in avoiding reflection in performance-critical areas of code. Normally, one should avoid the use of type hints until there is a known performance bottleneck. Type hints are metadata tags placed on symbols or expressions that are consumed by the compiler. They can be placed on function parameters, let-bound names, var names (when defined), and expressions:
 
@@ -262,8 +262,8 @@ For function return values, the type hint can be placed before the arguments vec
 -> #user/hinted
 ----
 
-[[TypeAliases]] 
-== Aliases 
+[[TypeAliases]]
+== Aliases
 
 Clojure provides aliases for primitive Java types and arrays which do not have typical representations as Java class names. For example, long arrays (long-array []) have a type of "[J".
 
@@ -276,7 +276,7 @@ Clojure provides aliases for primitive Java types and arrays which do not have t
 * double - A primitive double
 * doubles - A double array
 * void - A void return
-* short - A primitive short 
+* short - A primitive short
 * shorts - A short array
 * boolean - A primitive boolean
 * booleans - A boolean array
@@ -286,7 +286,7 @@ Clojure provides aliases for primitive Java types and arrays which do not have t
 * chars - A character array
 
 [[primitives]]
-== Support for Java Primitives 
+== Support for Java Primitives
 
 Clojure has support for high-performance manipulation of, and arithmetic involving, Java primitive types in local contexts. All Java primitive types are supported: int, float, long, double, boolean, char, short, and byte.
 
@@ -352,12 +352,12 @@ The best aspect of this is that you need not do anything special in your initial
 100000
 ----
 
-== Coercions 
+== Coercions
 
 At times it is necessary to have a value of a particular primitive type. These coercion functions yield a value of the indicated type as long as such a coercion is possible: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bigdec[bigdec] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bigint[bigint] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/boolean[boolean] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/byte[byte] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/char[char] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/double[double] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/float[float] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/int[int] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/long[long] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/num[num] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/short[short]
 
 [[optimization]]
-== Some optimization tips 
+== Some optimization tips
 
 * All arguments are passed to Clojure fns as objects, so there's no point to putting non-array primitive type hints on fn args. Instead, use the let technique shown to place args in primitive locals if they need to participate in primitive arithmetic in the body.
 * (let [foo (int bar)] ...) is the correct way to get a primitive local. Do not use ^Integer etc.
@@ -367,7 +367,7 @@ At times it is necessary to have a value of a particular primitive type. These c
 * Many people seem to presume only the unchecked- ops do primitive arithmetic - not so. When the args are primitive locals, regular + and * etc do primitive math with an overflow check - fast _and_ safe.
 * So, the simplest route to fast math is to leave the operators alone and just make sure the source literals and locals are primitive. Arithmetic on primitives yields primitives. If you've got a loop (which you probably do if you need to optimize) make sure the loop locals are primitives first - then if you accidentally are producing a boxed intermediate result you'll get an error on recur. Don't solve that error by coercing your intermediate result, instead, figure out what argument or local is not primitive.
 
-== Simple XML Support 
+== Simple XML Support
 Included with the distribution is simple XML support, found in the src/xml.clj file. All names from this file are in the xml namespace.
 
 ''''
