--- a/content/reference/special_forms.adoc
+++ b/content/reference/special_forms.adoc
@@ -1,7 +1,7 @@
 = Special Forms
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: reference
 :toc: macro
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
@@ -11,7 +11,7 @@ toc::[]
 == Special Forms
 
 [[def]]
-=== (_def_ symbol init?) 
+=== (_def_ symbol init?)
 
 Creates and interns or locates a global var with the name of symbol and a namespace of the value of the current namespace (_**pass:[*ns*]**_). If init is supplied, it is evaluated, and the root binding of the var is set to the resulting value. If init is not supplied, the root binding of the var is unaffected. _**def**_ always applies to the root binding, even if the var is thread-bound at the point where _**def**_ is called. _**def**_ yields the var itself _(not its value)_. Throws an exception if symbol is already in the namespace and not mapped to an interned var. Since 1.3, _**def**_ has allowed an optional doc-string: (_def_ symbol doc-string? init?).
 
@@ -99,7 +99,7 @@ See <<special_forms#binding-forms#,Binding Forms>> for more information about bi
 *Locals created with let are not variables. Once created their values never change!*
 
 [[quote]]
-=== (_quote_ form) 
+=== (_quote_ form)
 
 Yields the unevaluated form.
 
@@ -112,13 +112,13 @@ user=> '(a b c)
 Note there is no attempt made to call the function a. The return value is a list of 3 symbols.
 
 [[var]]
-=== (_var_ symbol) 
+=== (_var_ symbol)
 
 The symbol must resolve to a var, and the Var object itself _(not its value)_ is returned. The reader macro #'x expands to (var x).
 
 [[fn]]
-=== (_fn_ name? [params* ] exprs*) 
-=== (_fn_ name? ([params* ] exprs*)+) 
+=== (_fn_ name? [params* ] exprs*)
+=== (_fn_ name? ([params* ] exprs*)+)
 
 params => positional-params* , or positional-params* & rest-param +
 positional-param => binding-form +
@@ -152,8 +152,8 @@ Functions support specifying runtime pre- and postconditions.
 
 The syntax for function definitions becomes the following:
 
-=== (_fn_ name? [params* ] condition-map? exprs*) 
-=== (_fn_ name? ([params* ] condition-map? exprs*)+) 
+=== (_fn_ name? [params* ] condition-map? exprs*)
+=== (_fn_ name? ([params* ] condition-map? exprs*)+)
 
 The syntax extension also applies to to defn and other macros which expand to fn forms.
 
@@ -203,12 +203,12 @@ Note that recur is the only non-stack-consuming looping construct in Clojure. Th
 ----
 
 [[throw]]
-=== (_throw_ expr) 
+=== (_throw_ expr)
 
 The expr is evaluated and thrown, therefore it should yield an instance of some derivee of Throwable.
 
 [[try]]
-=== (_try_ expr* catch-clause* finally-clause?) 
+=== (_try_ expr* catch-clause* finally-clause?)
 
 catch-clause -> (_catch_ classname name expr*) +
 finally-clause -> (_finally_ expr*)
@@ -217,8 +217,8 @@ The exprs are evaluated and, if no exceptions occur, the value of the last is re
 
 [[monitor-enter]]
 [[monitor-exit]]
-=== (_monitor-enter_ x) 
-=== (_monitor-exit_ x) 
+=== (_monitor-enter_ x)
+=== (_monitor-exit_ x)
 
 These are synchronization primitives that should be avoided in user code. Use the _**locking**_ macro.
 
@@ -232,11 +232,11 @@ anchor:set![]
 <<vars#set%21,set!>> of vars is described in the <<vars#,Vars>> section of the reference.
 
 [[binding-forms]]
-=== Binding Forms (Destructuring) 
+=== Binding Forms (Destructuring)
 
 Clojure supports abstract structural binding, often called destructuring, in let binding lists, fn parameter lists, and any macro that expands into a let or fn. The basic idea is that a binding-form can be a data structure literal containing symbols that get bound to the respective parts of the init-expr. The binding is abstract in that a vector literal can bind to anything that is sequential, while a map literal can bind to anything that is associative.
 
-==== Vector binding destructuring 
+==== Vector binding destructuring
 
 Vector binding-exprs allow you to bind names to parts of _sequential_ things (not just vectors), like vectors, lists, seqs, strings, arrays, and anything that supports nth. The basic sequential form is a vector of binding-forms, which will be bound to successive elements from the init-expr, looked up via nth. In addition, and optionally, & followed by a binding-forms will cause that binding-form to be bound to the remainder of the sequence, i.e. that part not yet bound, looked up via http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nthnext[nthnext] .
 
@@ -270,7 +270,7 @@ Strings work too:
 ->[\a \s (\d \j \h \h \f \d \a \s) "asdjhhfdas"]
 ----
 
-==== Map binding destructuring 
+==== Map binding destructuring
 
 Map binding-forms allow you to bind names to parts of _associative_ things (not just maps), like maps, vectors, string and arrays (the latter three have integer keys). It consists of a map of binding-form-key pairs, each symbol being bound to the value in the init-expr at the key. In addition, and optionally, an _**:as**_ key in the binding form followed by a symbol will cause that symbol to be bound to the entire init-expr. Also optionally, an _**:or**_ key in the binding form followed by another map may be used to supply default values for some or all of the keys if they are not found in the init-expr:
 
@@ -320,7 +320,7 @@ As shown above, in the case of using prefixed keys, the bound symbol name will b
 
 There are similar _**:strs**_ and _**:syms**_ directives for matching string and symbol keys, the latter also allowing prefixed symbol keys since Clojure 1.6.
 
-==== Nested destructuring 
+==== Nested destructuring
 
 Since binding forms can be nested within one another arbitrarily, you can pull apart just about anything:
 
